k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: 'nginx'
    nginx.ingress.kubernetes.io/use-regex: 'true'
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
spec:
  tls:
    - hosts:
        - tuan-ticketing-app.xyz
        - www.tuan-ticketing-app.xyz 
      secretName: tuan-ticketing-app-xyz
  rules:
    - host: tuan-ticketing-app.xyz
      http:
        paths:
          - path: /?(.*)
            backend:
              serviceName: client-srv
              servicePort: 3000
          - path: /api/?(.*)
            backend:
              serviceName: server-srv
              servicePort: 5000
    - host: www.tuan-ticketing-app.xyz
      http:
        paths:
          - path: /?(.*)
            backend:
              serviceName: client-srv
              servicePort: 3000
          - path: /api/?(.*)
            backend:
              serviceName: server-srv
              servicePort: 5000
    - http:
        paths:
          - path: /?(.*)
            backend:
              serviceName: client-srv
              servicePort: 3000
          - path: /api/?(.*)
            backend:
              serviceName: server-srv
              servicePort: 5000
